--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Admin_Ninh ❤️❤️❤️</title>
+  <title>Love_Daeryeong ❤️❤️❤️</title>
   <link rel="stylesheet" href="./style/style.css">
 </head>
 
