--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Love_Daeryeong ❤️❤️❤️</title>
+  <title>Love_Trinh ❤️❤️❤️</title>
   <link rel="stylesheet" href="./style/style.css">
 </head>
 
@@ -12,7 +12,7 @@
     <div class="gift-box" id="giftBox">
       <img src="./style/gift.png" alt="Gift Box" style="width: 100%; height: 100%; object-fit: contain;">
     </div>
-    <div class="tap-hint">Open</div>
+    <div class="tap-hint">Ấn vào hộp quà i</div>
   </div>
 
   <canvas id="canvas" style="display:none;"></canvas>
